<resources>
    <string name="app_name">Star Seeker</string>
    <string name="welcome_screen_background">welcome screen background</string>
    <string name="star_seeker">Star Seeker</string>
    <string name="by_jiwon_jun_melody_lan">By Jiwon Jun, Melody Lan</string>
    <string name="press_star_to_skip">Press star to skip</string>
    <string name="skip_button">skip button</string>
    <string name="about_the_game">About the game</string>
    <string name="about_the_authors">About the Authors</string>
    <string name="citations">Citations</string>
    <string name="written_by_jiwon_jun_and_melody_lan_students_of_simon_fraser_university_https_opencoursehub_cs_sfu_ca_bfraser_grav_cms_cmpt276_home">Written by Jiwon Jun and Melody Lan, students of Simon Fraser University (https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home)</string>
    <string name="ever_wonder_how_many_stars_there_are_in_the_universe_in_star_seeker_click_on_an_area_of_the_sky_where_you_think_the_star_is_it_will_either_reveal_a_twinkling_star_or_tell_you_how_many_stars_live_in_the_same_row_and_column_unfortunately_the_telescope_is_quite_old_so_you_only_have_limited_number_of_scans_to_use_can_you_find_all_the_stars_using_the_least_amount_of_scans">Ever wonder how many stars there are in the universe? In star seeker, click on an area of the sky where you think the star is, it will either reveal a twinkling star or tell you how many stars live in the same row and column. Unfortunately, the telescope is quite old so you only have limited number of scans to use. Can you find all the stars using the least amount of scans?</string>
    <string name="play_game">Play Game</string>
    <string name="help">help</string>
    <string name="options">Options</string>
    <string name="board_size">Board size:</string>
    <string name="settings">Settings</string>
    <string name="number_of_mines">Number of mines:</string>
    <string name="erase_times_played">Erase times played</string>
    <string name="congratulations">Congratulations!</string>
    <string name="click_ok_to_return_to_main_menu">Click OK to return to main menu.</string>
    <string name="you_have_found_all_the_stars">You have found all the stars.</string>
</resources>
